[gd_scene load_steps=8 format=3 uid="uid://dohedw7pawxxj"]

[ext_resource type="Script" uid="uid://bm53r53vmtwwp" path="res://scenes/mechanics/ascension/AscensionCircle.gd" id="1_dnehc"]
[ext_resource type="Texture2D" uid="uid://cd3skeg24aokx" path="res://icon.svg" id="2_0uj3u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_djqah"]
radius = 8.0

[sub_resource type="Animation" id="Animation_dnehc"]
resource_name = "activate"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0uj3u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DetectionArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_djqah"]
resource_name = "ascend"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DetectionArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mw8f8"]
_data = {
&"RESET": SubResource("Animation_0uj3u"),
&"activate": SubResource("Animation_dnehc"),
&"ascend": SubResource("Animation_djqah")
}

[node name="AscensionCircle" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_dnehc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="CircleSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_0uj3u")

[node name="RuneContainer" type="Node2D" parent="."]

[node name="Rune1" type="Sprite2D" parent="RuneContainer"]

[node name="Rune2" type="Sprite2D" parent="RuneContainer"]

[node name="Rune3" type="Sprite2D" parent="RuneContainer"]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_djqah")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mw8f8")
}
